--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ deploy_web = "pipenv run python web/main.py"
 pdf_to_image_pass = "pipenv run python PdfToImage/unlock_pdf_to_image.py"
 pdf_to_image_divided_six = "pipenv run python PdfToImage/divide_pdf_to_image.py"
 pdf_to_image_divided_four = "pipenv run python PdfToImage/divided_four_pdf_to_image.py"
+pdf_to_image_by_firefox = "pipenv run python PdfToImage/pdf_to_image_by_firefox.py"
 
 [packages]
 PyDrive = "*"
@@ -25,3 +26,6 @@ boto3 = "*"
 pikepdf = "*"
 pypdf2 = "*"
 pypdf = "*"
+selenium = "*"
+pdfplumber = "*"
+pymupdf = "*"
