fix: パスの修正

--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,7 @@ image_to_url = "pipenv run python PdfToImage/image_to_url.py"
 upload_images = "pipenv run python PdfToImage/functional/upload_images_to_notion.py"
 delete_images = "pipenv run python PdfToImage/delete_images.py"
 delete_pdfs = "pipenv run python PdfToImage/delete_pdfs.py"
-deploy_web = "pipenv run python web/main.py"
+deploy_web = "pipenv run python PdfToImage/web/main.py"
 pdf_to_image_pass = "pipenv run python PdfToImage/unlock_pdf_to_image.py"
 pdf_to_image_divided_six = "pipenv run python PdfToImage/divide_pdf_to_image.py"
 pdf_to_image_divided_four = "pipenv run python PdfToImage/divided_four_pdf_to_image.py"
