fix: configファイルの修正

--- a/Windows/PdfToImage/config.sample.json
+++ b/Windows/PdfToImage/config.sample.json
@@ -6,9 +6,7 @@
     ],
     "device" : [
         {
-            "pdf_file_path": ""
-        },
-        {
+            "pdf_file_path": "",
             "image_file_path":""
         }
     ],
