--- a/Windows/PdfToImage/config.sample.json
+++ b/Windows/PdfToImage/config.sample.json
@@ -4,6 +4,11 @@
             "token": ""
         }
     ],
+    "DropBox" : [
+        {
+            "token": ""
+        }
+    ],
     "device" : [
         {
             "pdf_file_path": "",
